2010-01-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Added
	  left/right as collapse/expand keys.

2010-01-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: fixed 'Bug
	  569665 - Moving entire lines of code with Alt + Up/Down
	  causes the editor to behave erratically.'.

2010-01-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Templates/CodeDomFileDescriptionTemplate.cs:
	  fixed 'Bug 569548 - [Windows] New files are marked as
	  autogenerated'.

2010-01-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Commit fix for
	  "Bug 569588 - Pressing 'escape' in the Delete Project dialog
	  removes the project" from Chris Wright <dhasenan@gmail.com>.

2010-01-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Fix memory leak
	  where the comments task list could hold onto references to
	  projects after they were closed. Also handle loading all
	  comment tasks for the open workspaces if the view is first
	  shown after loading.

2010-01-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Templates now take care of line ending conventions.

2010-01-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/TextStylePolicy.cs: Added helper
	  method to convert eol markers to a string.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Clean up the
	  display of comment tags.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: New path bar
	  widget has reached feature parity wth the old version, so
	  enable it.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml: