@@ -1,3 +1,9 @@
+2010-01-15  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
+	  Improve error message. Fixes bug #570188 - Incorrect
+	  description of options in delete dialog.
+
 2010-01-14  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui.Components/ExtensibleTreeView.cs: Added
